PRACTICA_10_JDK
Microsoft Windows [Versión 10.0.19045.6456]
(c) Microsoft Corporation. Todos los derechos reservados.

C:\Users\aldop>cd..

C:\Users>cd
C:\Users

C:\Users>C:\Users\aldop\OneDrive\Documentos\TRABAJOS ESCUELA\PRACTICAS
"C:\Users\aldop\OneDrive\Documentos\TRABAJOS" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\Users>cd practicas
El sistema no puede encontrar la ruta especificada.

C:\Users>\PRACTICAS
"\PRACTICAS" no se reconoce como un comando interno o externo,
programa o archivo por lotes ejecutable.

C:\Users>cd \PRACTICAS

C:\PRACTICAS>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: F23D-4217

 Directorio de C:\PRACTICAS

24/11/2025  03:30 p. m.    <DIR>          .
24/11/2025  03:30 p. m.    <DIR>          ..
24/11/2025  03:30 p. m.               131 prueba.java
               1 archivos            131 bytes
               2 dirs  21,474,607,104 bytes libres

C:\PRACTICAS>javac
Usage: javac <options> <source files>
where possible options include:
  @<filename>                  Read options and filenames from file
  -Akey[=value]                Options to pass to annotation processors
  --add-modules <module>(,<module>)*
        Root modules to resolve in addition to the initial modules,
        or all modules on the module path if <module> is ALL-MODULE-PATH.
  --boot-class-path <path>, -bootclasspath <path>
        Override location of bootstrap class files
  --class-path <path>, -classpath <path>, -cp <path>
        Specify where to find user class files and annotation processors
  -d <directory>               Specify where to place generated class files
  -deprecation
        Output source locations where deprecated APIs are used
  --enable-preview
        Enable preview language features.
        To be used in conjunction with either -source or --release.
  -encoding <encoding>         Specify character encoding used by source files
  -endorseddirs <dirs>         Override location of endorsed standards path
  -extdirs <dirs>              Override location of installed extensions
  -g                           Generate all debugging info
  -g:{lines,vars,source}       Generate only some debugging info
  -g:none                      Generate no debugging info
  -h <directory>
        Specify where to place generated native header files
  --help, -help, -?            Print this help message
  --help-extra, -X             Print help on extra options
  -implicit:{none,class}
        Specify whether to generate class files for implicitly referenced files
  -J<flag>                     Pass <flag> directly to the runtime system
  --limit-modules <module>(,<module>)*
        Limit the universe of observable modules
  --module <module>(,<module>)*, -m <module>(,<module>)*
        Compile only the specified module(s), check timestamps
  --module-path <path>, -p <path>
        Specify where to find application modules
  --module-source-path <module-source-path>
        Specify where to find input source files for multiple modules
  --module-version <version>
        Specify version of modules that are being compiled
  -nowarn                      Generate no warnings
  -parameters
        Generate metadata for reflection on method parameters
  -proc:{none,only,full}
        Control whether annotation processing and/or compilation is done.
  -processor <class1>[,<class2>,<class3>...]
        Names of the annotation processors to run;
        bypasses default discovery process
  --processor-module-path <path>
        Specify a module path where to find annotation processors
  --processor-path <path>, -processorpath <path>
        Specify where to find annotation processors
  -profile <profile>
        Check that API used is available in the specified profile.
        This option is deprecated and may be removed in a future release.
  --release <release>
        Compile for the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  -s <directory>               Specify where to place generated source files
  --source <release>, -source <release>
        Provide source compatibility with the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  --source-path <path>, -sourcepath <path>
        Specify where to find input source files
  --system <jdk>|none          Override location of system modules
  --target <release>, -target <release>
        Generate class files suitable for the specified Java SE release.
        Supported releases:
            8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
  --upgrade-module-path <path>
        Override location of upgradeable modules
  -verbose                     Output messages about what the compiler is doing
  --version, -version          Version information
  -Werror                      Terminate compilation if warnings occur


C:\PRACTICAS>javac prueba.java
prueba.java:2: error: '{' or ';' expected
                         public static void main(String[]args)
                                                              ^
1 error

C:\PRACTICAS>javac prueba.java
prueba.java:3: error: <identifier> expected
                        System.out.printl("HOLA MUNDO");
                                         ^
prueba.java:3: error: illegal start of type
                        System.out.printl("HOLA MUNDO");
                                          ^
prueba.java:7: error: class, interface, enum, or record expected
}
^
3 errors

C:\PRACTICAS>javac prueba.java
prueba.java:2: error: '{' or ';' expected
                         public static void main(String[]args)
                                                              ^
1 error

C:\PRACTICAS>javac prueba.java

C:\PRACTICAS>javac prueba.java

C:\PRACTICAS>dir
 El volumen de la unidad C es OS
 El número de serie del volumen es: F23D-4217

 Directorio de C:\PRACTICAS

24/11/2025  03:39 p. m.    <DIR>          .
24/11/2025  03:39 p. m.    <DIR>          ..
24/11/2025  03:39 p. m.               416 prueba.class
24/11/2025  03:39 p. m.               133 prueba.java
               2 archivos            549 bytes
               2 dirs  21,474,385,920 bytes libres

C:\PRACTICAS>java prueba
HOLA M
